--- a/RealEstateApp/templates/property/property_detail.html
+++ b/RealEstateApp/templates/property/property_detail.html
@@ -68,7 +68,7 @@
       {% endif %}
       </div>
     </div>
-            <h5>Abbout this Listing</h5>
+            <h5>About this Listing</h5>
             <p>{{property.Description}}</p>
     </div>
 
