--- a/RealEstateApp/templates/ranking/create_ranking_property.html
+++ b/RealEstateApp/templates/ranking/create_ranking_property.html
@@ -1,8 +1,8 @@
 {% include 'base.html' %}{% load widget_tweaks %} {% block content %}
-<h1 class="text-center">Give Ranking for Property</h1>
-<hr/>
-<div class="container col-sm-6">
-<form method="post">
+<h1 class="text-center mt-4">Give Ranking for Hotel{{property}}</h1>
+
+<div class="container col-sm-6 mt-4">
+<form method="post" class="mt-4">
   {% csrf_token %} 
    {% for field in form.visible_fields %}
   <div class="form-group mt-1">
@@ -12,7 +12,8 @@
     {% endfor %}
   </div>
 {% endfor %}
-  <button type="submit" class="btn btn-primary mt-2 mb-2">Submit</button>
+  <button type="submit" class="btn btn-outline-primary mt-2 mb-2">Submit</button>
+  <a class="btn btn-outline-primary float-right mt-2 mb-2" href="/">Cancel</a>
 </form>
 </div>
 {% endblock %}
