--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -10,7 +10,10 @@
    <link rel="stylesheet" href="{% static 'css/booking_table.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/footer.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/recommended.css' %}"/>
+   <link rel="stylesheet" href="{% static 'css/register_done.css' %}"/>
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+   
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
