Implemented search functionality with guest nombers

--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -31,13 +31,13 @@
   <div>
    <nav class="navbar">
      <!-- LOGO -->
-     <div class="logo"><a href="/" style="color: #fff;font-family: Serif;text-decoration: none;">Hotel Booking</a></div>
+     <div class="logo"><a href="/home/" style="color: #fff;font-family: Serif;text-decoration: none;">Hotel Booking</a></div>
      <!-- NAVIGATION MENU -->
      <ul class="nav-links">
        <!-- <label for="checkbox_toggle" class="hamburger">&#9776;</label> -->
        <!-- NAVIGATION MENUS -->
        <div class="menu">
-         <li><a href="/" class="text-decoration-none">Home</a></li>
+         <li><a href="/home/" class="text-decoration-none">Home</a></li>
          
          {% comment %} <li class="services">
            <a href="/" class="text-decoration-none">Services</a>
