--- a/RealEstateApp/templates/property/search_property.html
+++ b/RealEstateApp/templates/property/search_property.html
@@ -7,13 +7,13 @@
 <div class="container">
   <div class="row">
 <div class="col-sm-4">
-<h4 class="ml-4">List Of The Hotels</h4>
+<h4 class="ml-4 mt-4">List Of The Hotels</h4>
 </div>
 <div class="col-sm-8 d-flex justify-content-end" >
  <form action="{% url 'realestateapp:search_with_property_name' %}">
 <div class="input-group">
-  <input type="search" class="form-control rounded mt-2 me-1" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
-  <button class="btn btn-success mt-2"><i class="fas fa-search"></i></button>
+  <input type="search" class="form-control rounded mt-4 me-1" name="property" placeholder="Property Name" aria-label="Search" aria-describedby="search-addon" />
+  <button class="btn btn-primary mt-4"><i class="fas fa-search"></i></button>
 </div>
  </form>
  </div>
