user register from

--- a/AdminUser/templates/admindashboard/sidenav.html
+++ b/AdminUser/templates/admindashboard/sidenav.html
@@ -85,16 +85,16 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="sidebar-link" href="/">
+              <a class="sidebar-link" href="https://calendar.google.com/calendar/u/0/r/month">
                 <span class="icon-holder">
                   <!-- <i class="c-deep-orange-500 ti-calendar"></i> -->
                   <i class="far fa-calendar" style="color:blue"></i>
                 </span>
-                <span class="title">Calendar</span>
+                <span class="title" >Calendar</span>
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="dropdown-toggle" href="javascript:void(0);">
+              <a  class="dropdown-toggle" href="https://www.mappls.com/">
                 <span class="icon-holder">
                     <i class="far fa-map" style="color:blue"></i>
                   </span>
@@ -103,7 +103,7 @@
                     
                   </span>
               </a>
-              <ul class="dropdown-menu">
+           <!--    <ul class="dropdown-menu">
                 <li>
                   <a href="">Google Map</a>
                 </li>
@@ -111,8 +111,8 @@
                   <a href="">Vector Map</a>
                 </li>
               </ul>
-            </li>
-            <li class="nav-item dropdown">
+            </li> -->
+           <!--  <li class="nav-item dropdown">
               <a class="dropdown-toggle" href="javascript:void(0);">
                 <span class="icon-holder">
                     <i class="fab fa-pagelines" style="color:blue"></i>
@@ -170,6 +170,6 @@
               </ul>
             </li>
                       
-          </ul>
+          </ul> -->
         </div>
       </div>
