--- a/AccountUser/templates/registration/register.html
+++ b/AccountUser/templates/registration/register.html
@@ -1,6 +1,9 @@
-{% extends "base.html" %} {% load widget_tweaks %} {% block title %} Create an
-account {% endblock %} {% block content %}
-<div class="col-sm-4 offset-sm-4">
+{% extends "base.html" %} 
+{% load widget_tweaks %}
+ {% block title %} Create an
+account {% endblock %}
+{% block content %}
+<!-- <div class="col-sm-4 offset-sm-4">
   <form
     method="post"
     action=""
@@ -93,4 +96,37 @@ account {% endblock %} {% block content %}
     </button>
   </form>
 </div>
+ -->
+
+
+
+
+
+<!-- 333333333333333333333 -->
+<form action="/">
+  {% csrf_token %}
+
+  <div class="container">
+    <h1>Register</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+    <label for="email"><b>User Name</b></label>
+    <input type="text" placeholder="User Name" name="email" id="email" required>
+    <label for="email"><b>First Name</b></label>
+    <input type="text" placeholder="First Name" name="email" id="email" required>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+
+    <label for="psw-repeat"><b>Confirm Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+    <hr>
+
+    <button type="submit" class="registerbtn">Register</button>
+  </div>
+</form>
+
 {% endblock %}
