--- a/RealEstateApp/templates/base.html
+++ b/RealEstateApp/templates/base.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="{% static 'css/recommended.css' %}"/>
    <link rel="stylesheet" href="{% static 'css/register_done.css' %}"/>
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" href="{% static 'css/register.css' %}"/>
    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
    
 
