--- a/RealEstateApp/templates/property/create_property.html
+++ b/RealEstateApp/templates/property/create_property.html
@@ -63,8 +63,8 @@
 
 </style>
 <body>
-<div class="col-sm-12 bg-image" style="background-image: url('{% static "images/sea.jpg" %}');">
-<h1 class="text-center">Add The Hotel</h1>
+{% comment %} <div class="col-sm-12 bg-image" style="background-image: url('{% static "images/sea.jpg" %}');"> {% endcomment %}
+<h1 class="text-center mt-2">Add The Hotel</h1>
 <hr />
 <div class="container col-sm-8 mb-4">
 
@@ -110,13 +110,15 @@
  
 {% endfor %}
 </div>
-<div class="d-flex justify-content-center ">
-  <button type="submit" class="btn btn-outline-primary mt-2 mb-2 me-4">Submit</button>
-  <a class="btn btn-outline-danger mt-2 mb-2" href="/">CANCEL</a>
-  </div>
-</form>
+
+  <button type="submit" class="btn btn-outline-primary mt-2 mb-2 me-4 float-left">Submit</button>
+  <a class="btn btn-outline-danger mt-2 mb-2 float-right" href="/">CANCEL</a>
+ </form>
 </div>
+<div class="mt-5">
 </div>
+<hr>
+{% comment %} </div> {% endcomment %}
 {% include 'home/footer.html' %} 
  <script>
   document.querySelectorAll(".drop-zone__input").forEach((inputElement) => {
