--- a/BookingApp/templates/booking/create_booking.html
+++ b/BookingApp/templates/booking/create_booking.html
@@ -1,11 +1,11 @@
 {% include 'base.html' %}{% load widget_tweaks %}
 {% load static %} {% block content %}
-<div class="col-sm-12 bg-image" style="background-image: url('{% static "images/sea.jpg" %}');">
+{% comment %} <div class="col-sm-12 bg-image" style="background-image: url('{% static "images/sea.jpg" %}');"> {% endcomment %}
 
 <h1 class="text-center">Booking of Hotel</h1>
 <hr/>
 <div class="container col-sm-8 mb-4">
-<form method="post">
+<form method="post" class="mb-4">
   {% csrf_token %} 
   <div class="row container">
   
@@ -43,13 +43,14 @@
 {% endfor %}
 
 </div>
- <div class="d-flex justify-content-center ">
-  <button type="submit" class="btn btn-outline-primary mt-2 mb-2 me-4">Submit</button>
-  <a class="btn btn-outline-danger mt-2 mb-2" href="/">CANCEL</a>
-  </div>
+ 
+  <button type="submit" class="btn btn-outline-primary mt-2 mb-2 me-4 float-left">Submit</button>
+  <a class="btn btn-outline-danger mt-2 mb-2 float-right" href="/">CANCEL</a>
+ <br>
+<br>
+<hr>
   </form>
-  
 </div>
-</div>
+
 {% include 'home/footer.html' %} 
 {% endblock %}
