forgot_pw html page implimented

--- a/BookingApp/templates/Signin.html
+++ b/BookingApp/templates/Signin.html
@@ -16,7 +16,7 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body style="font-family: sans-serif;">
   <div class="row">
     <div class="col-4 " style="height:100vh;width:100vh" >
      <img src="/static/images/Welcome to our hotel.jpg" class="img_left" style="height:100%;width:100%">
