--- a/BookingApp/static/css/sign.css
+++ b/BookingApp/static/css/sign.css
@@ -1,399 +1,4 @@
-/*.member-h2 {
-  font-size: 15px;
-  text-align: right;
-}
 
-
-input {
-  border: none;
-  outline: none;
-  padding: 10px 5px;
-  background-color: #f6f6f6;
-  flex: 1;
-}
-.input i {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-.flex-r,
-.flex-c {
-  justify-content: center;
-  align-items: center;
-  display: flex;
-}
-.flex-c {
-  flex-direction: column;
-}
-.flex-r {
-  flex-direction: row;
-}
-
-.container {
-  width: 100vw
-  height: 100vh;
-}
-
-.login-text {
-  background-color: #f6f6f6;
-  max-width: 400px;
-  min-height: 500px;
-  border-radius: 10px;
-  padding: 10px 20px;
-}
-
-
-
-form {
-  align-items: flex-start !important;
-  width: 100%;
-  margin-top: 15px;
-}
-
-.input-box {
-  margin: 10px 0px;
-  width: 100%;
-}
-.label {
-  font-size: 15px;
-  color: black;
-  margin-bottom: 3px;
-}
-.input {
-  background-color: #f6f6f6;
-  padding: 0px 5px;
-  border: 2px solid rgba(216, 216, 216, 1);
-  border-radius: 10px;
-  overflow: hidden;
-  justify-content: flex-start;
-}
-
-
-
-.check span {
-  color: #000000b2;
-  font-size: 15px;
-  font-weight: bold;
-  margin-left: 5px;
-}
-
-.btn {
- 
-  color:#fff;
-  border-radius: 30px;
-  padding: 10px 15px;
-  background: linear-gradient(122.33deg, #68bed1 30.62%, #1e94e9 100%);
-  margin-top: 30px;
-  margin-bottom: 10px;
-  font-size: 16px;
-  transition: all 0.3s linear;
-}
-
-.btn:hover {
-  transform: translateY(-2px);
-}
-.extra-line {
-  font-size: 15px;
-  font-weight: 600;
-}
-.extra-line a {
-  color: #0095b6;
-}
-
-.left_side {
-  background-image: url('/static/images/Welcome to our hotel.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;*/
-  /*background-position: center;
-/*}
-
-.right_side{
-  background-color: #d8d8d8;
-}
-
-img {
-  background-size: cover;
-
-}
-
-
-*/
-/*.facebook {   
-    background: #3b5998;   
-    color: white; 
-    margin: 20px;
-    font-size: 15px;
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 20%;
-    text-align: center;
-
-
-}         
-
-.instagram {   
-    background: #3f729b;   
-    color: white;   
-    list-style: none;
-    margin: 20px;
-    font-size: 15px;
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 20%;
-    text-align: center;
-   
-}  
-
-.google {   
-      color: white;   
-      background: #db4a39;
-      list-style: none;
-      margin: 20px;   
-      font-size: 15px;
-      display: block;
-      width: 30px;
-      height: 30px;
-      border-radius: 20%;
-      text-align: center;
-      }   
-      
-
-.fa-2x{
-  color: white;
-  
-}*/
-
-
-/*.fa{
-  padding: 20px;
-  font-size: 30px;
-  width: 60px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-
-}
-.fa:hover{
-  opacity: 0.7;
-  color: white;
-}
-.fa facebook{
-  background: #3B5998;
-  color: #fff;
-}*/
-
-
-
-
-/*new css*/
-
-
-
-/* config.css */
-
-
-/* helpers/align.css */
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.align {
-  display: grid;
-  place-items: center;
-}
-
-.grid {
-  inline-size: 90%;
-  margin-inline: auto;
-  max-inline-size: 20rem;
-}
-
-/* helpers/hidden.css */
-
-.hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-/* helpers/icon.css */
-
-
-.icons {
-  display: none;
-}
-
-.icon {
-  block-size: 1em;
-  display: inline-block;
-  fill: var(--iconFill);
-  inline-size: 1em;
-  vertical-align: middle;
-}
-
-/* layout/base.css */
-
-
-* {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: var(--htmlFontSize);
-}
-
-body {
-  background-color: var(--bodyBackgroundColor);
-  color: var(--bodyColor);
-  font-family: var(--bodyFontFamily), var(--bodyFontFamilyFallback);
-  font-size: var(--bodyFontSize);
-  font-weight: var(--bodyFontWeight);
-  line-height: var(--bodyLineHeight);
-  margin: 0;
-  min-block-size: 100vh;
-}
-
-/* modules/anchor.css */
-
-:root {
-  --anchorColor: #eee;
-}
-
-a {
-  color: var(--anchorColor);
-  outline: 0;
-  text-decoration: none;
-}
-
-a:focus,
-a:hover {
-  text-decoration: underline;
-}
-
-/* modules/form.css */
-
-:root {
-  --formGap: 0.875rem;
-}
-
-input {
-  background-image: none;
-  border: 0;
-  color: inherit;
-  font: inherit;
-  margin: 0;
-  outline: 0;
-  padding: 0;
-  transition: background-color 0.3s;
-}
-
-input[type="submit"] {
-  cursor: pointer;
-}
-
-.form {
-  display: grid;
-  gap: var(--formGap);
-}
-
-.form input[type="password"],
-.form input[type="text"],
-.form input[type="submit"] {
-  inline-size: 100%;
-}
-
-.form__field {
-  display: flex;
-}
-
-.form__input {
-  flex: 1;
-}
-
-/* modules/login.css */
-
-:root {
-  --loginBorderRadus: 0.25rem;
-  --loginColor: #eee;
-    /*input box*/
-  --loginInputBackgroundColor: #3b4148;    
-  --loginInputHoverBackgroundColor: #434a52;
-  color: black;
-  --loginLabelBackgroundColor: #363b41;
-
-  --loginSubmitBackgroundColor: #fff;
-  --loginSubmitColor: #eee;
-  --loginSubmitHoverBackgroundColor: #d44179;
-}
-
-.login {
-  color: var(--loginColor);
-}
-
-.login label,
-.login input[type="text"],
-.login input[type="password"],
-.login input[type="submit"] {
-  border-radius: var(--loginBorderRadus);
-  padding: 1rem;
-}
-
-.login label {
-  /*background-color: var(--loginLabelBackgroundColor);*/
-  background-color: #27327d;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-  padding-inline: 1.25rem;
-
-}
-
-.login input[type="password"],
-.login input[type="text"] {
-  background-color: var(--loginInputBackgroundColor);
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-
-}
-
-.login input[type="password"]:focus,
-.login input[type="password"]:hover,
-.login input[type="text"]:focus,
-.login input[type="text"]:hover {
-  background-color: var(--loginInputHoverBackgroundColor);
-
-}
-
-.login input[type="submit"] {
-  background-color: #1e3770;
-  color: var(--loginSubmitColor);
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.login input[type="submit"]:focus,
-.login input[type="submit"]:hover {
-  background-color: ;
-}
-
-/* modules/text.css */
 
 p {
   margin-block: 1.5rem;
@@ -402,3 +7,17 @@ p {
 .text--center {
   text-align: center;
 }
+.fa {
+        padding: 20px;
+        font-size: 30px;
+        width: 60px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+        border-radius: 50%;
+        }
+
+.fa:hover {
+            opacity: 0.7;
+            color:white;
+        }
