--- a/BookingApp/templates/Signin.html
+++ b/BookingApp/templates/Signin.html
@@ -7,14 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/sign.css' %}"/>
    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+   <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Signin</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   
 
-    <title>Hello, world!</title>
+    <title>Sign in</title>
   </head>
   <body style="font-family: sans-serif;">
   <div class="row">
@@ -26,49 +33,71 @@
   <div class="member d-flex  justify-content-end" style=" margin:40px">
         <span>Not a member?</span> <a class="text-decoration-none " href="#">Sign up</a>
       </div>
-      <div class="si_gn member d-flex  justify-content-center">
-      <h2 >Sign in <br>to your account</h2>
-      </div>
-           <form action="/" method="POST" class="form login" style=" margin:20px">
+      
+           <form
+                            method="post"
+                            action=""
+                            style="
+                            width: 85%;
+                            padding: 15px;
+                            "
+                        >
+                            {% csrf_token %}
+                            <p class="h2">Sign In <br> <span class="h4 fw-lighter">to your account</span></p>
+                           <div class="input-group mb-3" >
+                            <div class="input-group-prepend">
+                            <span class="input-group-text rounded" style="height:10vh;background-color:white;" >
+                            <span class="fa fa-paper-plane fa-2xl" style="color:lightblue;"></span>
 
-      <div class="form__field" >
-        <label for="login__username"><svg class="icon">
-            <i class="fas fa-at"></i>
-          </svg><span class="hidden">Username</span></label>
-        <input autocomplete="username" id="login__username" type="text" name="username" class="form__input" placeholder="Username" required>
-      </div>
+                            </span>
+                            </div>
+                             <input class="form-control" placeholder="Email" type="email" />
+                            </div>
+                            
+                            
+                            <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                            <span class="input-group-text rounded" style="height:10vh;background-color:white;">
+                            <i class="fa fa-lock" style="color:lightblue;"></i>
+                            </span>
+                            </div>
+                            <input class="form-control" placeholder="Password" type="password" />
 
-      <div class="form__field">
-        <label for="login__password"><svg class="icon">
-            <i class="fas fa-lock"></i>
-          </svg><span class="hidden">Password</span></label>
-        <input id="login__password" type="password" name="password" class="form__input" placeholder="Password" required>
-      </div>
-      <div class="checkbox login-options">
-          <label><input type="checkbox"/> Remember Me</input></label>
-          <a href="#" class="login-forgot member d-flex  justify-content-end text-decoration-none">Forgot Password?</a>
-        </div>  
+                            <div class="input-group-postpend">
+                            <span class="input-group-text rounded" style="height:10vh;background-color:white;" onclick="myPassword()">
+                            <i class="fa fa-eye" style="color:lightblue;"></i>
+                            </span>
+                          </div>
+                         </div>
+                             
+                            <div class="form-check ">
+                                <input class="form-check-input" type="checkbox" id="check1" name="option1" value="something">
+                                <label class="form-check-label"><p class="small">
+                              Remember me
+                            </p></label>
+                            <a class="text-decoration-none " style="margin-left: 60%;" href="#">forgot password?</a>
+                            <!-- <span class="justify-content-end">forgot password</span> -->
+                             </div>
 
-      <div class="form__field">
-        <input type="submit" value="Sign In">
-      </div>
-      <h5 class="text-center mt-3" style="color:black;">Or Sign Up With</h5>
+                           <button class="btn btn-primary rounded-pill ml-4 mt-4 form-control" type="submit">
+                            Sign in
+                            </button>
+   <h6 class="text-center mt-3"><p> Or Sign Up With</p></h6>
           <!-- <div class="col-sm-12 d-flex justify-content-center">
             <a href="#" class="fa fa-facebook  text-decoration-none fa-2x" style=" margin: 2vh;"></a> -->
             <div class="col-sm-12 d-flex justify-content-center">
             <img src="/static/images/facebook.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
             <img src="/static/images/apple.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
             <img src="/static/images/google.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
-            <!-- <a href="#" class="fa fa-google fa-2x text-decoration-none" style=" margin: 2vh;"></a>
-            <a href="#" class="fa fa-instagram fa-2x text-decoration-none" style=" margin: 2vh;"></a>
-             -->
-
+      
+            
 
     </form>
-
+   
+   
     </div>
-    <div class="d-flex  justify-content-center">
-            <p class="small mt-2 " style="color:black;">By sign up you agree to our term and that you have read our data policy</p>
+    <div class="d-flex  ">
+            <p class="small mt-2 ml-4 fw-lighter"><h5>By sign in you agree to our term and that you have read our data policy!</h5></p>
           </div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
