--- a/RealEstateApp/templates/home/img_slider.html
+++ b/RealEstateApp/templates/home/img_slider.html
@@ -1,51 +1,52 @@
 {% load static %}
 
-<div class="slideshow-container" style="">
-
-<div class="mySlides fade">
-  <img src="{% static 'images/slideimages/image15.jpg' %}" style="width:100%;height:88vh;">
-  
+<div class="slideshow-container">
+  <div class="mySlides fade">
+    <img
+      src="{% static 'images/slideimages/image15.jpg' %}"
+      style="width: 100%; height: 88vh"
+    />
+  </div>
+  <div class="mySlides fade">
+    <img
+      src="{% static 'images/slideimages/image17.jpg' %}"
+      style="width: 100%; height: 88vh"
+    />
+  </div>
+  <div class="mySlides fade">
+    <img
+      src="{% static 'images/slideimages/image11.jpg' %}"
+      style="width: 100%; height: 88vh"
+    />
+  </div>
 </div>
-<div class="mySlides fade">
-  <img src="{% static 'images/slideimages/image17.jpg' %}" style="width:100%;height:88vh;">
-  
-</div>
-<div class="mySlides fade">
-  <img src="{% static 'images/slideimages/image11.jpg' %}" style="width:100%;height:88vh;">
-  
-</div>
+<br />
 
-
-
-</div>
-<br>
-
-<div style="text-align:center">
-
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-  <span class="dot"></span> 
-
-  
+<div style="text-align: center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
 </div>
 <script>
-let slideIndex = 0;
-showSlides();
+  let slideIndex = 0;
+  showSlides();
 
-function showSlides() {
-  let i;
-  let slides = document.getElementsByClassName("mySlides");
-  let dots = document.getElementsByClassName("dot");
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
+  function showSlides() {
+    let i;
+    let slides = document.getElementsByClassName("mySlides");
+    let dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex > slides.length) {
+      slideIndex = 1;
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " active";
+    setTimeout(showSlides, 4000); // Change image every 4 seconds
   }
-  slideIndex++;
-  if (slideIndex > slides.length) {slideIndex = 1}    
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 4000); // Change image every 4 seconds
-}
 </script>
