--- a/AccountUser/templates/registration/sign.html
+++ b/AccountUser/templates/registration/sign.html
@@ -82,6 +82,7 @@
               href="{% url 'account:register' %}"
               >Register</a
             >
+            <p><a href="{% url "account:password_reset" %}">Forgotten your password?</a></p>
           </center>
         </form>
       </div>
