Implemented home and detail page

--- a/AccountUser/templates/registration/signup.html
+++ b/AccountUser/templates/registration/signup.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Signin</title>
+    <title>Registration</title>
     <style>
       .fa {
         padding: 20px;
@@ -146,11 +146,15 @@
                             Create your account
                             </button>
                             <h6 class="text-center mt-3"><p> Or Sign Up With</p></h6>
-                            <div class="col-sm-12 d-flex justify-content-center">
-                            <a href="#" class="fa fa-facebook"></a>
-                            <a href="#" class="fa fa-twitter"></a>
-                            <a href="#" class="fa fa-google"></a>
-                            </div>
+                            
+                             <div class="col-sm-12 d-flex justify-content-center">
+            <img src="/static/images/facebook.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
+            <img src="/static/images/apple.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
+            <img src="/static/images/google.png" class="img" style="height: 55%; width: 5%; margin: 2vh;">
+            <!-- <a href="#" class="fa fa-google fa-2x text-decoration-none" style=" margin: 2vh;"></a>
+            <a href="#" class="fa fa-instagram fa-2x text-decoration-none" style=" margin: 2vh;"></a>
+             -->
+            </div>
                             <p class="mt-2"> <span class="fw-lighter">This site is protected by reCAPTCHA and the Google </span> Privacy Policy <span class="fw-lighter">and </span>Terms of Services <span class="fw-lighter">apply.</span></p>
                         </form>
                         
