--- a/payment/templates/payment/stripe/process.html
+++ b/payment/templates/payment/stripe/process.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container card mt-4 d-flex align-items-center">
 <h1>Pay using Stripe</h1>
-<form method="post" action="{% url 'payment:stripe_payment_create' slug=booked.slug %}">
+<form method="post" action="{% url 'payment:stripe_done' slug=booked.slug %}">
 {% csrf_token %} 
 <script src ="https://checkout.stripe.com/checkout.js" class="stripe-button"
 data-key = "{{key}}"
