--- a/RealEstateApp/templates/newHome/newHome.html
+++ b/RealEstateApp/templates/newHome/newHome.html
@@ -484,7 +484,7 @@
       </div>
     </div>
     <div class="app-phone">
-      <img src="{% static 'images/newHomePage_img/phonebg2.png' %}" alt="" width="90%">
+      <img src="{% static 'images/newHomePage_img/phonebg2.png' %}" alt="">
     </div>
   </div>
 
@@ -534,8 +534,6 @@
     </div>
     <div class="last"></div>
   </footer>
-
-
 
     <script src="{% static 'js/landing_js/choices.js' %}"></script>
     <script src="{% static 'js/landing_js/flatpickr.js' %}"></script>
