--- a/RealEstateApp/static/css/newHome/newHome-1.css
+++ b/RealEstateApp/static/css/newHome/newHome-1.css
@@ -237,7 +237,7 @@
   color: black;
 }
 
-#most-button {
+/* #most-button {
   border: none;
   height: 40px;
   width: 85px;
@@ -249,7 +249,7 @@
   border-radius: 5px;
   position: relative;
   left: 33%;
-}
+} */
 
 .most-rate-rank-1 {
   width: 80%;
@@ -363,8 +363,8 @@
 
 .app-phone {
   position: absolute;
-  right: 1%;
-  top: 7%;
+  right: 7%;
+  top: 15%;
 }
 
 footer {
