--- a/payment/templates/payment/stripe/process.html
+++ b/payment/templates/payment/stripe/process.html
@@ -1,4 +1,22 @@
+
 {% extends 'base.html' %}
+{% block content %}
+<div class="container card mt-4 d-flex align-items-center">
+<h1>Pay using Stripe</h1>
+<form method="post" action="{% url 'payment:api_checkout_session' slug=booked.slug %}">
+{% csrf_token %} 
+<script src ="https://checkout.stripe.com/checkout.js" class="stripe-button"
+data-key = "{{key}}"
+data.description="jgfjgewiuagiwa"
+data-amount="90"
+data-locale = "auto"
+>
+</script>
+</form>
+</div>
+{% endblock %}
+
+{% comment %} {% extends 'base.html' %}
 {% block content %}
 <div class="container card mt-4 d-flex align-items-center">
 <h1>Pay using Stripe</h1>
@@ -13,4 +31,4 @@ data-locale = "auto"
 </script>
 </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
