--- a/RealEstateApp/templates/newHome/navbar.html
+++ b/RealEstateApp/templates/newHome/navbar.html
@@ -1,42 +1,15 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>navbar</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="stylesheet" href="{% static 'css/newHome/newHome-1.css' %}" />
-  </head>
-  <body>
-    <div class="navbar">
-      <div class="nav-logo">
-        <img
-          class="logo"
-          src="{% static 'images/landing_img/logo.png' %}"
-          alt=""
-        />
-      </div>
-      <div class="nav-link">
-        <a class="me-5" href="#">Home</a>
-        <a class="me-5" href="#">Hotel List</a>
-        <a class="me-5" href="#">Why Us</a>
-        <a class="me-5" href="#">Admin Dashboard</a>
-        <a class="me-5" href="#">Admin</a>
-        <a class="me-5" href="#">Contact</a>
-        <a class="me-5" href="#">Sign out</a>
-      </div>
-    </div>
-  </body>
-</html>
+<div class="navbar">
+  <div class="nav-logo">
+    <img class="logo" src="{% static 'images/landing_img/logo.png' %}" alt="" />
+  </div>
+  <div class="nav-link">
+    <a class="me-5" href="#">Home</a>
+    <a class="me-5" href="#">Hotel List</a>
+    <a class="me-5" href="#">Why Us</a>
+    <a class="me-5" href="#">Admin Dashboard</a>
+    <a class="me-5" href="#">Admin</a>
+    <a class="me-5" href="#">Contact</a>
+    <a class="me-5" href="#">Sign out</a>
+  </div>
+</div>
